[package]
name = "lisp-in-small-pieces"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
clap-verbosity-flag = "2.0.0"
confy = "0.5.1"
env_logger = "0.10.0"
human-panic = "1.1.0"
log = "0.4.17"
nom = "*"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"

[dev-dependencies]
assert_cmd = "*"
assert_fs = "1.0.10"
duct = "0.13.6"
predicates = "2.1.5"
pretty_assertions = "*"
spectral = "0.6.0"
tempfile = "3.3.0"
